<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.3.2</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.scheduler.batch</groupId>
	<artifactId>job</artifactId>
	<version>1.0.0</version>
	<name>job</name>
	<description>Demo project for Spring Boot batch </description>
	<url/>
	<licenses>
		<license/>
	</licenses>
	<developers>
		<developer/>
	</developers>
	<scm>
		<connection/>
		<developerConnection/>
		<tag/>
		<url/>
	</scm>
	<properties>
		<log4j2.version>2.19.0</log4j2.version>
		<java.version>21</java.version>
		<snakeyaml.version>2.0</snakeyaml.version>
		<sonar.projectKey>Apache-Camel-App</sonar.projectKey>
		<sonar.host.url>http://localhost:9000</sonar.host.url>
		<sonar.projectVersion>1.0.0</sonar.projectVersion>
		<sonar.sources>src/main/java</sonar.sources>
		<sonar.java.binaries>target/classes</sonar.java.binaries>
	</properties>
	<dependencies>

		<dependency>
			<groupId>com.common.artifact</groupId>
			<artifactId>artifacts</artifactId>
			<version>1.0-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-webflux</artifactId>
		</dependency>
		<!-- Spring Web Dependencies -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<!-- Spring Web Dependencies -->
		
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-configuration-processor</artifactId>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		
		<dependency>
		    <groupId>org.springframework.boot</groupId>
		    <artifactId>spring-boot-starter-batch</artifactId>
		</dependency>
	
		<!-- Camel and ActiveMq Dependencies-->
        <dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-activemq</artifactId>
		</dependency>
		<dependency>
		    <groupId>org.apache.camel.springboot</groupId>
		    <artifactId>camel-spring-boot-starter</artifactId>
		    <version>4.7.0</version>
		</dependency>
		<dependency>
		    <groupId>org.apache.camel.springboot</groupId>
		    <artifactId>camel-activemq-starter</artifactId>
		    <version>4.7.0</version>
		</dependency>
		<dependency>
		    <groupId>org.apache.activemq</groupId>
		    <artifactId>activemq-pool</artifactId>
		</dependency>
		<dependency>
		    <groupId>org.apache.camel.springboot</groupId>
		    <artifactId>camel-kafka-starter</artifactId>
		    <version>4.7.0</version>
		</dependency>
		<dependency>
		    <groupId>org.apache.qpid</groupId>
		    <artifactId>qpid-jms-client</artifactId>
		    <version>2.5.0</version>
		</dependency>
		<dependency>
		    <groupId>org.messaginghub</groupId>
		    <artifactId>pooled-jms</artifactId>
		</dependency>
		
		<!-- Camel and ActiveMq Dependencies-->
		<dependency>
		    <groupId>org.springframework.boot</groupId>
		    <artifactId>spring-boot-starter-jdbc</artifactId>
		</dependency>
		<dependency>
		    <groupId>com.microsoft.sqlserver</groupId>
		    <artifactId>mssql-jdbc</artifactId>
		</dependency>
		<dependency>
		    <groupId>org.springframework.boot</groupId>
		    <artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
		    <groupId>com.h2database</groupId>
		    <artifactId>h2</artifactId>
		    <scope>runtime</scope>
		</dependency>
		
		<dependency>
		    <groupId>org.springframework.retry</groupId>
		    <artifactId>spring-retry</artifactId>
		</dependency>
		<dependency>
		  <groupId>org.springframework.boot</groupId>
		  <artifactId>spring-boot-starter-mail</artifactId>
		</dependency>
		<dependency>
		    <groupId>org.jsoup</groupId>
		    <artifactId>jsoup</artifactId>
		    <version>1.18.1</version>
		</dependency>
		<dependency>
		    <groupId>org.springdoc</groupId>
		    <artifactId>springdoc-openapi-ui</artifactId>
		    <version>1.8.0</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
		    <groupId>org.sonarsource.scanner.maven</groupId>
		    <artifactId>sonar-maven-plugin</artifactId>
		    <version>4.0.0.4121</version>
		</dependency>		
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>	
			<plugin>
			    <groupId>org.sonarsource.scanner.maven</groupId>
			    <artifactId>sonar-maven-plugin</artifactId>
			    <version>4.0.0.4121</version>
			</plugin>	
		</plugins>
	</build>

</project>
